# MP4Kit

./: CMakeLists.txt  MP4Kit-Info.plist  MP4Kit-Prefix.pch
Demo/: Demo.1  main.cpp
MP4Kit.xcodeproj/: project.pbxproj
Source/: FMMP4Atom.cpp  FMMP4Atom.h  MP4Atom.cpp  MP4Atom.h  MP4Container.cpp  MP4Container.h  MP4ParentAtom.cpp  MP4ParentAtom.h
include/: CAtom.h
src/: CAtom.cpp  CMakeLists.txt
